--- a/files/jboss-proxy.conf
+++ b/files/jboss-proxy.conf
@@ -10,8 +10,8 @@ upstream jboss {
     zone jboss 64k;
 
     # List of JBoss Application Servers
-    server jboss-1:8080 slow_start=30s;
-    server jboss-2:8080 slow_start=30s;
+    server jboss-1:8080;
+    server jboss-2:8080;
 
     # Session Persistence based on JSESSION ID, if necessary
     sticky learn
