--- a/files/jboss-proxy.conf
+++ b/files/jboss-proxy.conf
@@ -6,18 +6,11 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream jboss {
-    # Health-monitored upstream groups must have a zone defined
-    zone jboss 64k;
+    sticky;
 
     # List of JBoss Application Servers
     server jboss-1:8080;
     server jboss-2:8080;
-
-    # Session Persistence based on JSESSION ID, if necessary
-    sticky learn
-        create=$upstream_cookie_JSESSIONID
-        lookup=$cookie_JSESSIONID
-        zone=client_sessions:1m;
 }
 
 match jboss_check {
