--- a/files/jboss-proxy.conf
+++ b/files/jboss-proxy.conf
@@ -1,23 +1,17 @@
 proxy_cache_path /tmp/NGINX_cache/ keys_zone=backcache:10m;
 
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
-}
-
 upstream jboss {
-    sticky;
+    ip_hash;
 
-    # List of JBoss Application Servers
+    # Lista de servidores JBoss
     server jboss-1:8080;
     server jboss-2:8080;
 }
 
 server {
     listen 80;
-    server_name example.com;
 
-    # Redirect all HTTP to HTTPS
+    # Redirecciona a /comerzzia/
     location = / {
         return 302 /comerzzia/;
     }
@@ -25,13 +19,5 @@ server {
 	location /comerzzia/ {
         proxy_pass http://jboss;
         proxy_cache backcache;
-
-    }
-
-	location /comerzzia/ws/ {
-        proxy_pass http://jboss;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
     }
 }
