--- a/files/jboss-proxy.conf
+++ b/files/jboss-proxy.conf
@@ -4,11 +4,11 @@ upstream jboss {
     # El modo en que mantiene la conexion al servidor se determina ahora.
 
     # ip_hash mantiene las conexiones de una misma IP siempre al mismo servidor
-    #ip_hash;
+    ip_hash;
 
     # least_conn alterna entre servidores para el que menos conexiones tenga
-    least_conn;
-    
+    #least_conn;
+
     # Lista de servidores JBoss
     server jboss-1:8080;
     server jboss-2:8080;
