--- a/files/jboss-proxy.conf
+++ b/files/jboss-proxy.conf
@@ -4,10 +4,13 @@ upstream jboss {
     # El modo en que mantiene la conexion al servidor se determina ahora.
 
     # ip_hash mantiene las conexiones de una misma IP siempre al mismo servidor
-    ip_hash;
+    #ip_hash;
 
     # least_conn alterna entre servidores para el que menos conexiones tenga
     #least_conn;
+
+    # sticky guarda la cookie y redirige en base a esta
+    sticky;
 
     # Lista de servidores JBoss
     server jboss-1:8080;
