--- a/files/jboss-proxy.conf
+++ b/files/jboss-proxy.conf
@@ -1,5 +1,3 @@
-proxy_cache_path /tmp/NGINX_cache/ keys_zone=backcache:10m;
-
 upstream jboss {
     # El modo en que mantiene la conexion al servidor se determina ahora.
 
@@ -9,7 +7,7 @@ upstream jboss {
     # least_conn alterna entre servidores para el que menos conexiones tenga
     #least_conn;
 
-    # sticky guarda la cookie y redirige en base a esta
+    # sticky guarda la cookie y redirige en base a esta. (Solo disponible con módulo sticky)
     sticky;
 
     # Lista de servidores JBoss
